ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationDetail__mdt/ApplicationDetail__mdt.object-meta.xml
<CustomObject>
    <description>This metadata used to link the Application, ApplicationVariable, Endpoint, EndpointMethod.</description>
    <label>ApplicationDetail</label>
    <pluralLabel>ApplicationDetails</pluralLabel>
</CustomObject>