ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationDetail__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__mdt</referenceTo>
    <relationshipLabel>ApplicationDetails</relationshipLabel>
    <relationshipName>ApplicationDetails</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>