ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationDetail__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <referenceTo>Endpoint__mdt</referenceTo>
    <relationshipLabel>ApplicationDetails</relationshipLabel>
    <relationshipName>ApplicationDetails</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>