ApplicatioAppexchageV1/force-app/main/default/objects/ApplicationDetail__mdt/fields/EndpointMethod__c.field-meta.xml
<CustomField>
    <fullName>EndpointMethod__c</fullName>
    <label>EndpointMethod</label>
    <referenceTo>EndpointMethod__mdt</referenceTo>
    <relationshipLabel>ApplicationDetails</relationshipLabel>
    <relationshipName>ApplicationDetails</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>